<resources>
    <string name="app_name">My Application</string>
    <string name="ui">For UI Show</string>
    <string name="setting">Setting</string>
    <string name="welcome_escape_ad">跳过</string>

    <string name="test_bing">Bing Picture</string>
    <string name="test_meizhi">Meizhi</string>
    <string name="test_animation">Animation</string>
    <string name="test_material_edittext">Material Edittext</string>
    <string name="test_indicator">Indicator</string>
    <string name="test_skin">APP Skin test</string>
    <string name="test_comment">Comment test</string>
    <string name="test_copyboard">UC Copyboard test</string>
    <string name="test_pudding">Pudding test</string>
    <string name="test_video_cache">Video Cache test</string>
    <string name="test_touch_scroll">Touch scroll RecyclerView test</string>

    <string name="test_bing_load_all">Bing Picture has been loaded all.</string>
    <string name="test_bing_info">Info</string>

    <string name="app_no_change">The app skin color is not changed.</string>
    <string name="test_skin_oper">Use</string>

    <string name="test_comment_oper">only emoji</string>

    <string name="test_video_cache_oper">Clear</string>
    <string name="test_video_cache_play">Play</string>

    <string name="test_swipe">Swipe Frame Test</string>
    <string name="test_swipe_list">Recycler Item</string>
    <string name="test_swipe_bezier">Bezier</string>
    <string name="test_swipe_qq_stay">QQ Exit</string>
    <string name="test_swipe_door">Pull Door</string>
    <string name="test_swipe_wechat_slide">Wechat Exit</string>
    <string name="test_swipe_shutters">Shutters</string>
    <string name="test_swipe_drawer">Drawer</string>
    <string name="test_swipe_drawer_mode_drawer">Drawer Mode</string>
    <string name="test_swipe_drawer_mode_slide">Slide Mode</string>
    <string name="test_swipe_drawer_edge">Effect edge size</string>
    <string name="test_swipe_drawer_factor">Relative factor</string>

    <string name="setting_app_color">App Color</string>
    <string name="setting_app_language">Language</string>
    <string name="setting_app_night">Night</string>
    <string name="setting_app_night_on">On</string>
    <string name="setting_app_night_off">Off</string>
    <string name="setting_app_language_system">System</string>
    <string name="setting_app_language_zh">Simple Chinese</string>
    <string name="setting_app_language_zh_tw">Traditional Chinese</string>
    <string name="setting_app_language_en">English</string>
</resources>
