<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/setting_app_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/setting_app_color_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_app_color"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_text" />

        <TextView
            android:id="@+id/setting_app_color_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/text_complementary"
            android:textSize="@dimen/title_text" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thin"
        android:background="@color/background_complementary" />

    <FrameLayout
        android:id="@+id/setting_app_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/setting_app_language_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_app_language"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_text" />

        <TextView
            android:id="@+id/setting_app_language_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/text_complementary"
            android:textSize="@dimen/title_text" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_thin"
        android:background="@color/background_complementary" />

    <FrameLayout
        android:id="@+id/setting_app_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/setting_app_night_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_app_night"

            android:textColor="@color/text_color"
            android:textSize="@dimen/title_text" />

        <TextView
            android:id="@+id/setting_app_night_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/text_complementary"
            android:textSize="@dimen/title_text" />
    </FrameLayout>
</LinearLayout>